--- a/client/src/app/product/product-list/product-list.component.scss
+++ b/client/src/app/product/product-list/product-list.component.scss
@@ -17,7 +17,23 @@ a
     text-decoration: none;
 }
 
-
+.products-container{
+    width: 100vw !important;
+    margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.productt-card {
+ //   width: 380px;
+  //  position: relative;
+    box-shadow: 0 2px 7px #c9c9c9;
+    background: #fafafa;
+    margin: 5px;
+    flex: 1 0 21%; 
+    max-width: 25%;
+}
 .badge {
     position: absolute;
     left: 0;
@@ -128,15 +144,7 @@ a
     justify-content: center;
     width: 100%;
 }
-.product-card {
-    width: 380px;
-    position: relative;
-    box-shadow: 0 2px 7px #dfdfdf;
-    background: #fafafa;
-    margin: 5px;
-    flex: 1 0 21%; 
-    max-width: 25%;
-}
+
 
 .sell-btn{
     background-color: var(--light-blue);
@@ -145,9 +153,23 @@ a
 }
 
 
-// .product-details p {
-//     font-size: 15px;
-//     line-height: 22px;
-//     margin-bottom: 18px;
-//     color: #999;
-// }
+@media(max-width:600px){
+    .products-container{
+       // max-width: 1000px;
+       // margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    
+       
+    }
+    .productt-card{
+          
+         flex: 1 1 250px;
+        // padding-left: .5rem;
+        // padding-right: .5rem;
+         margin-bottom: 4px;
+         max-width: 100%;
+    }
+    
+}
