order without fedex + login facebook and add to data base

--- a/client/src/app/cart/cart/cart.component.scss
+++ b/client/src/app/cart/cart/cart.component.scss
@@ -125,7 +125,7 @@ label {
 }
 
 .promo-code-cta {
-  border-radius: 4px;
+  border-radius: 0px !important;
   font-size: 0.625rem;
   margin-left: 0.625rem;
   padding: 0.6875rem 1.25rem 0.625rem;
