--- a/client/src/app/dashboard/dashboard-layout/dashboard-layout.component.html
+++ b/client/src/app/dashboard/dashboard-layout/dashboard-layout.component.html
@@ -17,10 +17,10 @@
           >
           <a
             mat-list-item
-            routerLink="/dashboard-naim-adminvv1/profile"
+            routerLink="/dashboard-naim-adminvv1/users"
             routerLinkActive="bg-gray-200"
             class="font-semibold text-gray-500 hover:text-primary"
-            ><mat-icon class="mr-2">account_circle</mat-icon> View my profile</a
+            ><mat-icon class="mr-2">account_circle</mat-icon>Users</a
           >
           <a
             mat-list-item
@@ -88,7 +88,7 @@
                     >
                     <a
                       mat-list-item
-                      routerLink="/dashboard-naim-adminvv1/profile"
+                      routerLink="/dashboard-naim-adminvv1/users"
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
                       ><mat-icon class="mr-2">account_circle</mat-icon>Users</a
