--- a/client/src/app/profile/user-info/user-info.component.html
+++ b/client/src/app/profile/user-info/user-info.component.html
@@ -33,7 +33,7 @@
             />
           <input type="text"
            class="border border-gray-200 p-2 px-4 w-full rounded-sm mt-5"
-           formControlName="state"
+           formControlName="phone"
            placeholder="phone"
            [(ngModel)]="this.userToUpdate.phone"
            />
