--- a/client/src/app/cart/cart/cart.component.html
+++ b/client/src/app/cart/cart/cart.component.html
@@ -15,7 +15,7 @@
          class="promo-code-field">
         <button 
         class="promo-code-cta"
-        mat-flat-button class="py-3 px-20 font-bold" 
+        mat-flat-button class="font-bold" 
               style="background-color: var(--purple); color:white"
         >Apply</button>
       </div>
@@ -64,7 +64,7 @@
             <div class="promo-value final-value" id="basket-promo"></div>
           </div>
         </div>
-        <div class="summary-delivery">
+        <!-- <div class="summary-delivery">
           <select name="delivery-collection" class="summary-delivery-selection">
               <option value="0" selected="selected">Select Collection or Delivery</option>
              <option value="collection">Collection</option>
@@ -72,13 +72,13 @@
              <option value="second-class">Royal Mail 2nd Class</option>
              <option value="signed-for">Royal Mail Special Delivery</option>
           </select>
-        </div>
+        </div> -->
         <div class="summary-total">
           <div class="total-title">Total</div>
           <div class="total-value final-value" id="basket-total">{{cart.subTotal}}</div>
         </div>
         <div class="summary-checkout">
-          <button class="checkout-cta">Go to Secure Checkout</button>
+          <button class="checkout-cta" routerLink="/cart/payment-method">Get Paid</button>
         </div>
       </div>
     </aside>
