--- a/client/src/app/cart/cart/cart.component.scss
+++ b/client/src/app/cart/cart/cart.component.scss
@@ -393,3 +393,95 @@ aside {
     padding: 0 1rem;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.empty-cart{
+
+  width :50vw;
+  margin: 0 auto ;
+  text-align : center;
+  font-family :'Maison Neue';
+  font-weight :300;
+};
+svg{
+  max-width :60%;
+  padding: 5rem 3rem;
+}
+ 
+  
+  
+  #oval, #plus, #diamond, #bubble-rounded{
+    animation: plopp 4s ease-out infinite;
+    
+    // for i in (1..16)
+    //   &:nth-child({i})
+    //     animation-delay -240ms * i
+  }
+    
+  
+
+
+ 
+h3{
+  font-size: 2rem;
+  line-height :2rem;
+  margin :0;
+  padding: 0;
+  font-weight: 600;
+}
+  
+  
+p{
+  color :rgba(0,0,0,0.5);
+  font-size :18px;
+  line-height: 24px;
+  max-width :80%;
+  margin: 1.25rem auto 0 auto;
+}
+  
+  
+body{
+  background: #f2f2f2
+}
+  
+
+
