fix contact info + PDF  info

--- a/client/src/app/auth/signup/signup.component.scss
+++ b/client/src/app/auth/signup/signup.component.scss
@@ -29,3 +29,16 @@
     }
   }
 }
+
+
+
+.facebook-btn{
+  background-color: rgb(26, 119, 242);
+  .icon{
+    margin-right:5px ;
+  }
+}
+.facebook-btn:hover{
+  background-color: rgb(41, 132, 250);
+}
+
