--- a/client/src/app/contact/contact.component.html
+++ b/client/src/app/contact/contact.component.html
@@ -53,9 +53,9 @@
             <mat-icon style="color:var(--purple)">settings_phone</mat-icon>
           </div>
           <div class="flex-1">
-            <a href="callto:125512556523" class="text-gray-300 font-semibold hover:text-accent">+1255 - 1255 - 6523</a>
+            <a  class="text-gray-300 font-semibold hover:text-accent">(877) - 893 - 0553 </a>
             <br />
-            <a href="callto:125512556523" class="text-gray-300 font-semibold hover:text-accent mt-2 inline-block">+1255 - 1255 - 6523</a>
+            <a class="text-gray-300 font-semibold hover:text-accent mt-2 inline-block">(317) - 972 - 9721 (whatsApp) </a>
           </div>
         </div>
         <div class="flex space-x-4 mt-8">
@@ -63,9 +63,8 @@
             <mat-icon style="color:var(--purple)">mail_outline</mat-icon>
           </div>
           <div class="flex-1">
-            <a href="mailto:mail@example.com" class="text-gray-300 font-semibold hover:text-accent">mail@example.com</a>
+            <a href="info@nationwideventures.net" class="text-gray-300 font-semibold hover:text-accent">info@nationwideventures.net</a>
             <br />
-            <a href="mailto:mail@example.com" class="text-gray-300 font-semibold hover:text-accent mt-2 inline-block">mail@example.com</a>
           </div>
         </div>
         <div class="flex space-x-4 mt-8">
@@ -75,11 +74,10 @@
           <div class="flex-1" >
             <a
               target="_blank"
-              href="https://www.google.com/maps/place/40%C2%B011'40.8%22N+105%C2%B019'32.3%22W/@40.194669,-105.3298772,17z/data=!3m1!4b1!4m14!1m7!3m6!1s0x54eab584e432360b:0x1c3bb99243deb742!2sUnited+States!3b1!8m2!3d37.09024!4d-95.712891!3m5!1s0x0:0x55ba4ddb8cd5ed29!7e2!8m2!3d40.1946654!4d-105.3256504"
               class="text-gray-300 hover:text-accent font-semibold"
             >
-              Bowery St, New York, <br />
-              NY 10013, USA
+             8888 Keystone Crossing Ste 1300 <br />
+              Indianapolis,In , 46240 
             </a>
           </div>
         </div>
