--- a/client/src/app/home/home-components/category/category.component.html
+++ b/client/src/app/home/home-components/category/category.component.html
@@ -4,7 +4,7 @@
     <div class="grid xl:grid-cols-2 gap-x-8 mt-10">
       <div class="ll-starter__card px-5 grid grid-cols-12 place-items-center">
         <div class="col-span-5 px-5">
-          <img class="-mt-14" src="assets/images/category/phone.png" alt="" />
+          <img class="-mt-14" src="assets/images/category/iphone-13-pro-max.png" alt="iphone-13-pro-max"/>
         </div>
         <div class="py-5 col-span-7">
           <h4 class="text-white mb-4">iPhone</h4>
@@ -18,7 +18,7 @@
       </div>
       <div class="ll-starter__card px-5 grid grid-cols-12 place-items-center mt-16 xl:mt-0">
         <div class="col-span-5 px-5">
-          <img class="-mt-14" src="assets/images/category/tablette.png" alt="" />
+          <img class="-mt-14" src="assets/images/category/ipad-pro-12.png" alt="Ipad-11-pro" />
         </div>
         <div class="py-5 col-span-7 order-first text-right">
           <h4 class="text-white mb-4">iPad</h4>
@@ -32,7 +32,7 @@
       </div>
       <div class="ll-starter__card px-5 grid grid-cols-12 place-items-center mt-16 xl:mt-0">
         <div class="col-span-5 px-5">
-          <img class="-mt-14" src="assets/images/category/watch.png" alt="" />
+          <img class="-mt-14" src="assets/images/category/watch.png" alt="Iwatch" />
         </div>
         <div class="py-5 col-span-7 order-first text-right">
           <h4 class="text-white mb-4">iWatch</h4>
@@ -46,7 +46,7 @@
       </div>
       <div class="ll-starter__card px-5 grid grid-cols-12 place-items-center mt-16 xl:mt-0">
         <div class="col-span-5 px-5">
-          <img class="-mt-14" src="assets/images/category/laptop.png" alt="" />
+          <img class="-mt-14" src="assets/images/category/laptop.png" alt="Mac-pro-nationwideventures" />
         </div>
         <div class="py-5 col-span-7 order-first text-right">
           <h4 class="text-white mb-4">Mac</h4>
