--- a/client/src/app/shared/components/footer/footer.component.html
+++ b/client/src/app/shared/components/footer/footer.component.html
@@ -23,20 +23,20 @@
 
                     <img src="assets/images/svg/street.png" alt="street-logo" style="width: 26px;">
                     <div class="spacer" style="width: 13px;"></div>
-					<p><span>444 S. Cedros Ave</span> Solana Beach, California</p>
+					<p><span>8888 keystone crossing ste 1300</span> indianapolis,In, 46240</p>
 				</div>
 
 				
                <div class="middle-ico">
                     <img src="assets/images/svg/phone.png" alt="phone-logo" style="width: 26px;">
                     <div class="spacer" style="width: 13px;"></div>
-					<p>+1.555.555.5555</p>
+					<p>(877) 893 - 0553</p>
 				</div>
 
 				<div class="middle-ico">
                     <img src="assets/images/svg/email.png" alt="mail-logo" style="width: 26px;">
                     <div class="spacer" style="width: 13px;"></div>
-					<p><a href="mailto:support@company.com">support@company.com</a></p>
+					<p><a href="mailto:info@nationwideventures.net">info@nationwideventures.net</a></p>
 				</div>
 
 			</div>
@@ -50,14 +50,14 @@
 
 				<div class="footer-icons">
 
-					<a href="#" class="svg-container">
+					<a href="https://www.facebook.com/Nationwide-ventures-108352275330989"  target="_blank" class="svg-container">
                         <img src="assets/images/svg/facebook.png" alt="fb-logo" class="svg-icon">
                     </a>
-					<a href="#" class="svg-container">
+					<a href="#" target="_blank" class="svg-container">
                         <img src="assets/images/svg/instagram.png" alt="in-logo" class="svg-icon">
                     </a>
-                    <a href="#" class="svg-container">
-                        <img src="assets/images/svg/linkedin.png" alt="lin-logo" class="svg-icon">
+                    <a href="#"target="_blank" class="svg-container">
+                        <img src="assets/images/svg/twitter.png" alt="lin-logo" class="svg-icon">
                     </a>
 
 				</div>
