--- a/client/src/app/auth/signup/signup.component.html
+++ b/client/src/app/auth/signup/signup.component.html
@@ -38,7 +38,7 @@
 
       <div class="flex w-full mt-6">
         <button
-          class="w-full  text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10" style="background-color: var(--blue);"
+          class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10" style="margin-bottom: 15px;"
           type="submit"
           (click)="signup()">
           Sign up
@@ -48,8 +48,13 @@
 
     </form>
 
-
-
+    <button
+      class="facebook-btn w-full text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
+      type="submit"
+      (click)="fbLogin()">
+      <i class="fa fa-facebook icon"></i>
+      Continue with facebook
+    </button>
     <div class="mt-3">
       <span class="text-gray-600 text-sm"> Already have an account? </span>
       <a routerLink="/auth/login" class="text-gray-700 text-sm font-semibold hover:text-accent"> login </a>
