--- a/client/src/app/shared/components/sidenav/sidenav.component.html
+++ b/client/src/app/shared/components/sidenav/sidenav.component.html
@@ -2,8 +2,23 @@
     <mat-nav-list>
         <a mat-list-item [routerLink]="item?.path" *ngFor="let item of navList"> {{ item?.name }} </a>
     </mat-nav-list>
+    <mat-nav-list>
+        <a mat-button (click)="openTrackOrder()"  class="text-lg font-bold py-2 px-5">Track Order</a>
+      </mat-nav-list>
+      <button mat-menu-item routerLink="/profile"  *ngIf='isLoggedIn && !isAdmin'>
+        <mat-icon>home</mat-icon>
+        <span>Profile</span>
+      </button>
+      <button mat-menu-item routerLink="/dashboard-naim-adminvv1"  *ngIf='isLoggedIn && isAdmin' >
+        <mat-icon>home</mat-icon>
+        <span>Profile</span>
+      </button>
+      <button mat-menu-item (click)="logout()"  *ngIf='isLoggedIn'>
+        <mat-icon>logout</mat-icon>
+        <span>Logout</span>
+      </button>
     <div class="flex items-center justify-between mt-auto">
-        <a [routerLink]="['/auth/login']" mat-raised-button color='warn' class="text-sm font-bold py-2 px-5 w-28">Login</a>
-        <a [routerLink]="['/auth/signup']" mat-raised-button color="accent" class="text-sm font-bold py-2 px-5 ml-2 w-28">Join Now</a>
+        <a   (click)="openLogin()" mat-raised-button  style="color: rgb(32, 32, 32)" class="text-sm font-bold py-2 px-5 w-28"  *ngIf='!isLoggedIn'>Login</a>
+        <a  (click)="openSignup()" mat-raised-button style="background-color: var(--purple); color:white" class="text-sm font-bold py-2 px-5 ml-2 w-28"  *ngIf='!isLoggedIn'>Join Now</a>
     </div>
 </div>
