--- a/client/src/app/track-order/track-order.component.html
+++ b/client/src/app/track-order/track-order.component.html
@@ -20,9 +20,6 @@
       <div class="flex">
 
 
-
-
-
         <div class="w-1/3 text-center px-6">
           <div
             class="rounded-lg flex items-center justify-center border border-gray-200"
@@ -186,18 +183,175 @@
             </div>
           </div>
         </div>
-
-
-
-
-
-
-
-
       </div>
     </div>
   </div>
   
+
+
+
+
+
+
+
+
+<!--mobile tracker-container -->
+<div class="mobile-tracker-container" *ngIf="myorder">
+  <div>
+    <h1 class="mb-4 text-center font-black text-gray-700">STEPS</h1>
+    <div class="flex">
+
+      <div class="w-3/3 text-center px-6 info-card">
+        <div
+          class="rounded-lg flex items-center justify-center border border-gray-200"
+          style="background-color: rgb(100, 131, 100);"
+        >
+          <div
+            class="w-1/3 bg-transparent h-20 flex items-center justify-center icon-step"
+          >
+          <img src="assets/images/icons/await.svg" alt="shipped-icon">
+          </div>
+          <div
+            class="w-3/3 h-24 flex flex-col items-center justify-center px-1 rounded-r-lg body-step"
+            style="background-color: rgb(171, 204, 171);"
+          >
+            <h2 class="font-bold text-sm">Await for shipment</h2>
+          </div>
+        </div>
+      </div>
+
+        <!-- Roww-->
+        <div class="flex-1 flex items-center justify-center">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M14 2h-7.229l7.014 7h-13.785v6h13.785l-7.014 7h7.229l10-10z"/></svg>
+        </div>
+        <!-- Roww-->
+
+
+
+
+      <div class="w-3/3 text-center px-6 info-card" *ngIf="status == null || status == 'awaiting'" >
+        <div
+          class="bg-gray-300 rounded-lg flex items-center justify-center border border-gray-200"
+        >
+        <div
+        class="w-1/3 bg-transparent h-20 flex items-center justify-center icon-step"
+      >
+      <img src="assets/images/icons/shipped.png" alt="shipped-icon">
+      </div>
+          <div
+            class="w-3/3 bg-gray-200 h-24 flex flex-col items-center justify-center px-1 rounded-r-lg body-step"
+          >
+            <h2 class="font-bold text-sm">Parcel is not shipped</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-3/3 text-center px-6 info-card" *ngIf="status != null && status != 'awaiting'">
+        <div
+          class="rounded-lg flex items-center justify-center border border-gray-200"
+          style="background-color: rgb(100, 131, 100);"
+        >
+        <div
+              class="w-1/3 bg-transparent h-20 flex items-center justify-center icon-step"
+            >
+            <img src="assets/images/icons/shipped.png" alt="shipped-icon">
+            </div>
+          <div
+            class="w-3/3 h-24 flex flex-col items-center justify-center px-1 rounded-r-lg body-step"
+            style="background-color: rgb(171, 204, 171);"
+          >
+            <h2 class="font-bold text-sm">Parcel is shipped</h2>
+
+          </div>
+        </div>
+      </div>
+
+      <!-- Roww-->
+      <div class="flex-1 flex items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M14 2h-7.229l7.014 7h-13.785v6h13.785l-7.014 7h7.229l10-10z"/></svg>
+      </div>
+      <!-- Roww-->
+
+
+      <div class="w-3/3 text-center px-6 info-card" *ngIf="status != 'checked' && status != 'paid'">
+        <div
+          class="bg-gray-300 rounded-lg flex items-center justify-center border border-gray-200"
+        >
+          <div class="w-1/3 bg-transparent h-20 flex items-center justify-center icon-step">
+            <img src="assets/images/icons/checked.png" alt="checked-cions">
+          </div>
+          <div
+            class="w-2/3 bg-gray-200 h-24 flex flex-col items-center justify-center px-1 rounded-r-lg body-step"
+          >
+            <h2 class="font-bold text-sm">Not checked</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-3/3 text-center px-6 info-card" *ngIf="status == 'checked' || status == 'paid'" >
+        <div
+          class="rounded-lg flex items-center justify-center border border-gray-200"
+          style="background-color: rgb(100, 131, 100);"
+        >
+          <div class="w-1/3 bg-transparent h-20 flex items-center justify-center icon-step">
+            <img src="assets/images/icons/checked.png" alt="checked-cions">
+          </div>
+          <div
+            class="w-2/3 h-24 flex flex-col items-center justify-center px-1 rounded-r-lg body-step"
+            style="background-color: rgb(171, 204, 171);"
+          >
+            <h2 class="font-bold text-sm">Device(s) checked</h2>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Roww-->
+      <div class="flex-1 flex items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M14 2h-7.229l7.014 7h-13.785v6h13.785l-7.014 7h7.229l10-10z"/></svg>
+      </div>
+      <!-- Roww-->
+
+      <div class="w-3/3 text-center px-6 info-card" *ngIf="status !='paid'">
+        <div
+          class="bg-gray-300 rounded-lg flex items-center justify-center border border-gray-200"
+        >
+          <div class="w-1/3 bg-transparent h-20 flex items-center justify-center icon-step">
+            <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M21 6.285l-11.16 12.733-6.84-6.018 1.319-1.49 5.341 4.686 9.865-11.196 1.475 1.285z"/></svg>
+          </div>
+          <div
+            class="w-2/3 bg-gray-200 h-24 flex flex-col items-center justify-center px-1 rounded-r-lg body-step"
+          >
+            <h2 class="font-bold text-sm">Not paid yet</h2>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="w-3/3 text-center px-6 info-card" *ngIf="status =='paid'">
+        <div
+          class="rounded-lg flex items-center justify-center border border-gray-200"
+          style="background-color: rgb(100, 131, 100);"
+        >
+          <div class="w-1/3 bg-transparent h-20 flex items-center justify-center icon-step">
+            <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M21 6.285l-11.16 12.733-6.84-6.018 1.319-1.49 5.341 4.686 9.865-11.196 1.475 1.285z"/></svg>
+          </div>
+          <div
+            class="w-2/3 h-24 flex flex-col items-center justify-center px-1 rounded-r-lg body-step"
+            style="background-color: rgb(171, 204, 171);"
+          >
+            <h2 class="font-bold text-sm">Order paid</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- / Mobile tracker container-->
+
+
+
+
 
 
 
