--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -20,12 +20,12 @@
         <button class="button-56" role="button" (click)="scroll(target)">Start now</button>
       </div>
       <div class="col-span-12 md:col-span-6 lg:col-span-5 xxl:col-span-6 ll-image mt-10 md:mt-0">
-        <img class="hero ml-auto main-img" src="assets/images/hero3.png" alt="Hero" />
+        <img class="hero ml-auto main-img" src="assets/images/apple-products.png" alt="apple-products-for-sale" />
       </div>
     </div>
   </div>
 </div>
-<div class="test" #target> 
+<div class="test" #target id="howitworks"> 
 <app-category  id="categories"></app-category>
 </div>
 <div class="ll-service-area">
