--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -9,7 +9,8 @@
   min-height: 50vw;
   .hero{
     width: 49vw;
-    height: 45vh;
+    height: 63vh;
+    margin-top: -20px;
   }
   .container {
     position: relative;
