--- a/client/src/app/about/about.component.html
+++ b/client/src/app/about/about.component.html
@@ -1,3 +1,78 @@
+<div class="ll-service-area">
+  <div class="container">
+    <h1 class="ll-service__title text-center font-extralight mb-12">It's As Easy As 1, 2, 3.</h1>
+    <div class="ll-services grid grid-cols-12 gap-8">
+      <div class="ll-service col-span-12 sm:col-span-6 lg:col-span-3">
+        <div class="number">01</div>
+        <h3 class="mb-2">Browse offers</h3>
+        <p>Search from my list of offers to find your device</p>
+      </div>
+      <div class="ll-service col-span-12 sm:col-span-6 lg:col-span-3">
+        <div class="number">02</div>
+        <h3 class="mb-2">Pick a device </h3>
+        <p>Less waste time & cost but get more value.</p>
+      </div>
+      <div class="ll-service col-span-12 sm:col-span-6 lg:col-span-3">
+        <div class="number">03</div>
+        <h3 class="mb-2">Ship for FREE or meet us in person</h3>
+        <p>Our work begins with the commissioning, not yours.</p>
+      </div>
+      <div class="ll-service col-span-12 sm:col-span-6 lg:col-span-3">
+        <div class="number">04</div>
+        <h3 class="mb-2">Get paid within 48 hours</h3>
+        <p>Each offer describes a specific result.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- <div class="about-container">
+
+
+  <div class="pt-20 pb-24">
+    <div class="container">
+      <h1 class="about__title">We are a team of experience professional in their Specialties</h1>
+      <div class="flex flex-wrap mt-5 xl:mt-8">
+        <div class="lg:w-1/2 lg:order-last">
+          <a href="javascript:void(0)" class="about__img relative block">
+            <img src="assets/images/about.jpg" alt="About" />
+            <mat-icon class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">play_circle_filled</mat-icon>
+          </a>
+        </div>
+        <div class="lg:w-1/2 lg:pr-10 mt-8 lg:mt-0 about__text">
+          <p class="mb-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur optio, perferendis, magnam accusantium reiciendis assumenda
+            repellat in qui, quos dolor esse quibusdam illum necessitatibus labore officia tempore modi placeat dolores!
+          </p>
+          <p class="mb-3">
+            lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure doley.
+          </p>
+          <div class="experience grid grid-cols-3 gap-4 mt-6 xl:mt-16">
+            <div class="experience__item">
+              <h2>367+</h2>
+              <h6 class="font-semibold">SUCCEEDED PROJECT</h6>
+            </div>
+            <div class="experience__item">
+              <h2>500+</h2>
+              <h6 class="font-semibold">HAPPY CLIENT</h6>
+            </div>
+            <div class="experience__item">
+              <h2>12+</h2>
+              <h6 class="font-semibold">YEARS OF EXPERIENCE</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
+  
+  </div>
+
 
 <div class="about-container">
 
@@ -42,4 +117,4 @@
 
 
 
-</div>
+</div> --> 
