--- a/client/src/app/about/about.component.scss
+++ b/client/src/app/about/about.component.scss
@@ -80,3 +80,237 @@
   }
 }
 
+
+
+
+.ll-hero {
+  //background: linear-gradient(130deg, #5f345b 30%, #537ca5 100%);
+  background: url("/assets/images/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  padding: 200px 0 100px;
+  position: relative;
+  min-height: 50vw;
+  .hero{
+    width: 49vw;
+    height: 63vh;
+    margin-top: -20px;
+  }
+  .container {
+    position: relative;
+    z-index: 3;
+    .startbt{
+      
+    }
+  }
+  &__particles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  &-text {
+    h1 {
+      font-size: 32px;
+      line-height: 50px;
+      font-family: 'Titan One', cursive;
+    }
+  }
+}
+::ng-deep #home_hero__particles {
+  width: 100%;
+  height: 100%;
+}
+
+// Service
+.ll-service {
+  position: relative;
+  padding: 64px 15px 0px;
+  &-area {
+    padding: 80px 0;
+  }
+  &__title {
+    font-size: 40px;
+    line-height: 60px;
+    letter-spacing: 1px;
+  }
+  .number {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-weight: 900;
+    font-size: 123px;
+    line-height: 100px;
+    color: rgba(94, 94, 94, 0.15);
+    font-family: 'Montserrat', sans-serif;
+  }
+  h3 {
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 24px;
+  }
+  p {
+    font-size: 1rem;
+  }
+}
+
+// Starter
+
+@media (min-width: 576px) {
+  // service
+  .ll-service {
+    &__title {
+      font-size: 55px;
+      line-height: 75px;
+      letter-spacing: 3px;
+    }
+    padding: 77px 15px 25px;
+    .number {
+      font-size: 144px;
+      line-height: 115px;
+    }
+    h3 {
+      font-size: 1.5rem;
+      font-weight: 700;
+      line-height: 24px;
+    }
+    
+    p {
+      font-size: 1.09rem;
+    }
+  }
+  // Process
+  .ll-process {
+    padding: 77px 15px 25px;
+    .number {
+      font-size: 144px;
+      line-height: 115px;
+    }
+    h3 {
+      font-size: 1.5rem;
+    }
+    p {
+      font-size: 1.09rem;
+    }
+  }
+}
+@media (min-width: 992px) {
+  // service
+  .ll-service {
+    &__title {
+      font-size: 60px;
+      line-height: 75px;
+      letter-spacing: 5px;
+    }
+  }
+}
+@media (min-width: 1200px) {
+  // hero
+  .ll-hero {
+    &-text {
+      h1 {
+        font-size: 40px;
+        line-height: 64px;
+      }
+    }
+  }
+  // service
+  .ll-service {
+    &__title {
+      letter-spacing: 15px;
+    }
+  }
+}
+@media (min-width: 1440px) {
+  // hero
+  .ll-hero {
+    padding: 200px 0;
+    &-text {
+      h1 {
+        font-size: 42px;
+      }
+    }
+  }
+  // service
+  .ll-service {
+    &__title {
+      font-size: 65px;
+      letter-spacing: 20px;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+/* CSS */
+.button-56 {
+  align-items: center;
+  background-color: #E8D3D0;
+  border: 2px solid #000;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #111;
+  cursor: pointer;
+  display: flex;
+  font-family: Inter,sans-serif;
+  font-size: 16px;
+  height: 48px;
+  justify-content: center;
+  line-height: 24px;
+  max-width: 100%;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-56:after {
+  background-color: #B8C5CB;
+  border-radius: 8px;
+  content: "";
+  display: block;
+  height: 48px;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  transform: translate(8px, 8px);
+  transition: transform .2s ease-out;
+  z-index: -1;
+}
+
+.button-56:hover:after {
+  transform: translate(0, 0);
+}
+
+.button-56:active {
+  background-color: #ffdeda;
+  outline: 0;
+}
+
+.button-56:hover {
+  outline: 0;
+}
+
+@media (min-width: 768px) {
+  .button-56 {
+    padding: 0 40px;
+  }
+}
+@media (max-width: 550px) {
+  img{
+    width: 80vw !important;
+    height: 45vh;
+  }
+}
